--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_extra_dirs =  ~\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\2.5.2\libraries
+; lib_extra_dirs =  ~\AppData\Local\Arduino15\packages\esp8266\hardware\esp8266\2.5.2\libraries
 monitor_speed = 115200
 
 lib_deps = 
-    tzapu/WiFiManager
+    #tzapu/WiFiManager
+    https://github.com/cotestatnt/esp-fs-webserver.git
